--- a/Install/TODO.txt
+++ b/Install/TODO.txt
@@ -19,3 +19,7 @@ curl https://bootstrap.pypa.io/get-pip.py -o get-pip.py
 python3 get-pip.py --force-reinstall
 #
 pip install -r requirements.txt
+
+# in case of several files : requirements1.txt , requirements2.txt...
+# good method:
+cat requirements* | sort -uf| grep -v '^#' >>Result.txt
